# notification_master

./: ANDROID_README.md  BUILD_FIXES.md  CHANGELOG.md  COMPARISON_ANALYSIS.md  DESKTOP_NOTIFICATIONS_GUIDE.md  HTTP_POLLING_GUIDE.md  IOS_BUILD_FIX.md  IOS_BUILD_FIX_FA.md  IOS_DEPLOYMENT_TARGET_FIX.md  IOS_DEPLOYMENT_TARGET_FIX_FA.md  IOS_README.md  IOS_SETUP.md  IOS_SETUP_FA.md  LICENSE  LOCAL_NOTIFIER_ANALYSIS_FA.md  NOTIFICATION_TYPES_FA.md  README.md  README_FA.md  WINDOWS_NOTIFICATIONS_GUIDE.md  agent.md  bash.exe.stackdump  ios_build_fix.sh  ios_error.txt  ios_error_new.txt  mac_error.txt  notification_master_plugin.cpp  pubspec.yaml
.github/workflows/: ci.yml
.mimocode/: .cron-lock
android/: build.gradle  build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/notification_master/: BootCompletedReceiver.kt  CustomNotificationHelper.kt  NotificationForegroundService.kt  NotificationHelper.kt  NotificationMasterPlugin.kt  NotificationPollingWorker.kt  NotificationReceiver.kt  ScheduledNotifications.kt
android/src/main/res/xml/: network_security_config.xml
android/src/test/kotlin/com/example/notification_master/: NotificationMasterPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/notification_master_example/: MainActivity.kt
example/android/app/src/main/res/xml/: network_security_config.xml
example/integration_test/: plugin_integration_test.dart
example/ios/: Podfile
example/ios/Runner/: AppDelegate.swift  Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: android_example.dart  desktop_notification_demo.dart  flutter_notification_client.dart  http_notification_page.dart  improved_polling_test_windows.dart  ios_example.dart  linux_example.dart  macos_example.dart  main.dart  notification_service_page.dart  platform_selector.dart  platform_selector_io.dart  platform_selector_web.dart  reminder_alarm_page.dart  simple_polling_page.dart  token_topic_page.dart  web_example.dart  windows_example.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  Info.plist  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/php_polling_server/: README.md  config.php  notifications.php  schema.sql
example/server/: README.md  connection.php  create_minute_notification.php  notification_server.php  setup_database.sql  simple_notification_server.php  test_server.py
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt  copy_poller.cmake
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
ios/: notification_master.podspec
ios/Classes/: NotificationMasterPlugin.swift
ios/notification_master/: Package.swift
ios/notification_master/Sources/notification_master/: NotificationMasterPlugin.swift
lib/: notification_master.dart  notification_master_desktop.dart  notification_master_method_channel.dart  notification_master_platform_interface.dart  notification_master_web.dart  unified_notification_service.dart
lib/src/: notification_importance.dart  notification_master_desktop.dart  notification_master_desktop_io.dart  notification_master_desktop_stub.dart  notification_polling.dart  notification_polling_io.dart  notification_polling_logic.dart  notification_polling_stub.dart  notification_polling_web.dart  platform_utils_io.dart  platform_utils_stub.dart  unified_notification_service.dart
lib/src/tools/: notification_importance.dart
linux/: CMakeLists.txt  nm_background_poller_linux.cpp  notification_master_plugin.cc  notification_master_plugin_private.h
linux/include/notification_master/: notification_master_plugin.h
linux/test/: notification_master_plugin_test.cc
macos/: notification_master.podspec
macos/Classes/: NotificationMasterPlugin.swift
macos/notification_master/: Package.swift
macos/notification_master/Sources/notification_master/: NotificationMasterPlugin.swift
macos/notification_master/Sources/notification_master_poller/: main.swift
test/: notification_master_method_channel_test.dart  notification_master_test.dart
windows/: CMakeLists.txt  nm_background_poller.cpp  nm_registry_config.h  notification_master_plugin.cpp  notification_master_plugin.h  notification_master_plugin_c_api.cpp  wintoastlib.cpp  wintoastlib.h
windows/include/notification_master/: notification_master_plugin_c_api.h
windows/test/: notification_master_plugin_test.cpp
